shared22/style.css, tweak to stop 2ndary text area overlapping controls

--- a/shared22/style.css
+++ b/shared22/style.css
@@ -480,7 +480,7 @@ dt {
 	color: #ccc;
 	}
 #transcription {
-	margin: 5px 140px 10px 25px;
+	margin: 5px 140px 0px 25px;
 	font-size: 28px;
 	font-family: 'Doulos Sil', 'Gentium Plus', 'Charis Sil', Gentium, serif;
 	color: #C33;
